REFACTOR: POST /user *pakai interface{} di datasource, see: a660dc3
