# docs/swagger.json
@@ -22,7 +22,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.GetUserResp"
+                            "$ref": "#/definitions/user.RespGetUser"
                         }
                     }
                 }
@@ -39,7 +39,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateUserByIdReq"
+                            "$ref": "#/definitions/user.ReqUpdateUserById"
                         }
                     }
                 ],
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateUserReq"
+                            "$ref": "#/definitions/user.ReqCreateUser"
                         }
                     }
                 ],
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Response"
+                            "$ref": "#/definitions/user.RespCreateUser"
                         }
                     }
                 }
@@ -116,7 +116,7 @@
                 }
             }
         },
-        "user.CreateUserReq": {
+        "user.ReqCreateUser": {
             "type": "object",
             "properties": {
                 "name": {
@@ -124,7 +124,29 @@
                 }
             }
         },
-        "user.GetUserResp": {
+        "user.ReqUpdateUserById": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.RespCreateUser": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.RespGetUser": {
             "type": "object",
             "properties": {
                 "total": {
@@ -135,17 +157,6 @@
                     "items": {
                         "$ref": "#/definitions/user.User"
                     }
-                }
-            }
-        },
-        "user.UpdateUserByIdReq": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
                 }
             }
         },
